<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Launcher3</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="home_screen">Home screen</string>
    <string name="custom_actions">Custom actions</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold to place manually</string>
    <string name="place_automatically">Add automatically</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_loading_message">Loading apps&#8230;</string>
    <string name="all_apps_no_search_results">No apps found matching \"<xliff:g example="Android" id="query">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="notifications_header">Notifications</string>
    <string name="long_press_shortcut_to_add">Touch &amp; hold to pick up a shortcut.</string>
    <string name="long_accessible_way_to_add_shortcut">Double-tap &amp; hold to pick up a shortcut or use custom actions.</string>
    <string name="out_of_space">No more room on the home screen</string>
    <string name="hotseat_out_of_space">No more room in the dock</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="install_drop_target_label">Install</string>
    <string name="permlab_install_shortcut">Install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention</string>
    <string name="permlab_read_settings">Read home screen settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read home screen settings and shortcuts</string>
    <string name="permlab_write_settings">Write home screen settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to modify home screen settings and shortcuts</string>
    <string name="msg_no_phone_permission"><xliff:g example="Launcher3" id="app_name">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="gadget_error_text">Widget failed to load</string>
    <string name="gadget_setup_text">Awaiting setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="disabled_app_label">Disabled <xliff:g id="app_name" example="Messenger">%1$s</xliff:g></string>
    <plurals name="badged_app_label">
        <item quantity="one"><xliff:g id="app_name" example="Messenger">%1$s</xliff:g>, has <xliff:g id="notification_count" example="1">%2$d</xliff:g> notification</item>
        <item quantity="other"><xliff:g id="app_name" example="Messenger">%1$s</xliff:g>, has <xliff:g id="notification_count" example="3">%2$d</xliff:g> notifications</item>
    </plurals>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="placeholder_event_description">Placeholder</string>
    <string name="title_calendar_event_directions">Directions</string>
    <string name="placeholder_calendar_event_address">the Great Hall of the People</string>
    <string name="title_preference_feed_providers">Feed providers</string>
    <string name="title_preference_swipe_feed">Swipe left for feed</string>
    <string name="summary_preference_swipe_feed">You can swipe from the left of the home screen for the feed</string>
    <string name="placeholder_rss_item">Cows and fishes join together and win water fight at the command of our Supreme Leader who just happened to edit this issue of Pravda</string>
    <string name="placeholder_rss_card_description">Just as the majestic Pyongyang Grand Mass Gymnastics ended, the great leader, our Supreme Leader, Kim \'Fatty the Third\' Jong-un used his expert diplomatic skills to organize the Cows and the Fishes together against the closing Imperialist forces...</string>
    <string name="title_pref_rss_sources">Syndication sources</string>
    <string name="title_pref_feed_corner_rounding">Corner radius</string>
    <string name="placeholder_rss_item_categories">North Korea, DPRK, Miniluv, Minitrue, Miniplenty, Minipeace, Great Leader, Great Leader, Great Leader, Great Leader</string>
    <string name="title_preference_feed_widgets">Manage widgets</string>
    <string name="title_pref_blur_feed_cards">Blur cards</string>
    <string name="description_pref_blur_feed_cards">Blur the background of cards and turn the text white</string>
    <string name="title_pref_feed_card_opacity">Card opacity</string>
    <string name="title_pref_feed_web_applications">Embedded websites</string>
    <string name="title_pref_feed_tab_controller">Tabbing provider</string>
    <string name="title_pref_feed_show_event_color">Tint calendar events</string>
    <string name="summary_pref_feed_show_event_color">Calendar events will be tinted by the colour of the calendar</string>
    <string name="title_pref_show_other_tab">Show uncategorized tab</string>
    <string name="summary_pref_show_other_tab">If turned on, a tab will be shown containing all cards that cannot be categorized. Not all tabbing providers will work with this.</string>
    <string name="title_pref_feed_tabs">Customize tabs</string>
    <string name="title_button_open_externally">Open in browser</string>
    <string name="title_pref_feed_hide_toolbar">Automatically hide toolbar</string>
    <string name="summary_pref_feed_hide_toolbar">The toolbar will be automatically hidden when scrolling through the feed</string>
    <string name="title_pref_feed_widgets_tab">Categorize widgets in separate tab</string>
    <string name="title_pref_override_locale">Override locale</string>
    <string name="title_pref_feed_tabs_on_bottom">Display title bar on bottom</string>
    <string name="summary_pref_feed_tabs_on_bottom">Tabs and menu items will be displayed at the bottom of the screen</string>
    <string name="pref_category_providers">Providers</string>
    <string name="title_pref_feed_card_margin_horizontal">Horizontal card margin</string>
    <string name="title_pref_feed_card_margin_vertical">Vertical card margin</string>
    <string name="title_pref_forecast_item_count">Forecast card item count</string>
    <string name="title_pref_daily_forecast_item_count">Daily forecast card item count</string>
    <string name="title_pref_show_vertical_daily_forecast">Display vertical daily forecast</string>
    <string name="summary_pref_show_vertical_daily_forecast">The daily forecast will be displayed in horizontal rows</string>
    <string name="title_pref_show_vertical_hourly_forecast">Display vertical hourly forecast</string>
    <string name="summary_pref_show_vertical_hourly_forecast">The hourly forecast will be displayed as horizontal rows</string>
    <string name="title_pref_feed_card_elevation">Card elevation</string>
    <string name="title_pref_feed_background">Background image provider</string>
    <string name="title_pref_feed_search_url_template">Search URL</string>
    <string name="title_pref_feed_display_back_to_top_button">Display back to top button</string>
    <string name="summary_pref_feed_display_back_to_top_button">A back to top button will be displayed when scrolling down</string>
    <string name="title_pref_high_contrast_toolbar">Display toolbar background</string>
    <string name="summary_pref_high_contrast_toolbar">This increases tab visibility by placing a partially opaque background behind it</string>
    <string name="title_pref_share_background_image">Export background image</string>
    <string name="summary_pref_share_background_image">This exports the current background image</string>
    <string name="title_pref_feed_calendar_days">Calendar event threshold</string>
    <string name="title_pref_elevate_weather_card">Elevate weather card</string>
    <string name="summary_pref_elevate_weather_card">The weather card will be raised</string>
    <string name="title_pref_display_feed_tabs_as_single_line">Display tab items as single line</string>
    <string name="summary_pref_display_feed_tabs_as_single_line">Tabs will be displayed with icons and text in the same line</string>
    <string name="title_pref_feed_hide_tab_text">Hide tab titles</string>
    <string name="summary_pref_feed_hide_tab_text">Tab titles will not be displayed</string>
    <string name="title_pref_remove_feed_widget">Remove title bar widget</string>
    <string name="title_pref_feed_toolbar_widget_force_style">Force style in toolbar widget</string>
    <string name="summary_pref_feed_toolbar_widget_force_style">Librechair will attempt to apply the set theme to the widget</string>
    <string name="title_pref_feed_animation">Opening animation</string>
    <string name="title_pref_title_bar_home_widget">Use home widget as toolbar widget</string>
    <string name="summary_pref_title_bar_home_widget">The title bar widget will be replaced by the home widget</string>
    <string name="title_pref_feed_card_title_alignment">Card title alignment</string>
    <string name="title_pref_feed_header_only_card_title_alignment">Header-only card title alignment</string>
    <string name="title_pref_feed_indicator_provider">Tab indicator</string>
    <string name="title_pref_feed_color_provider">Tab color provider</string>
    <string name="title_pref_feed_tab_colors">Custom tab colors</string>
    <string name="title_pref_feed_hide_unused_tabs">Hide unused tabs</string>
    <string name="summary_pref_feed_hide_unused_tabs">Tabs without active feed providers will be hidden</string>
    <string name="title_pref_feed_provider_package">Feed provider</string>
    <string name="summary_pref_feed_infobox">This option is not available with all background image providers</string>
    <string name="title_pref_feed_infobox">Show background image description if available</string>
    <string name="pref_category_chips">Chips</string>
    <string name="title_pref_feed_chips_dummy_key">Chip providers</string>
    <string name="title_pref_feed_chip_opacity">Chip opacity</string>
    <string name="title_pref_feed_chips_on_top">Chips on top</string>
    <string name="summary_pref_feed_chips_on_top">Chips will be displayed at the top of the title bar</string>
    <string name="title_pref_feed_outline_chips">Display chip outlines</string>
    <string name="summary_pref_feed_outline_chips">Chips will be displayed with a MDC outlined background</string>
    <string name="title_pref_feed_chip_weather_item_count">Weather item count</string>
</resources>