<?xml version="1.0" encoding="utf-8"?><!--
  ~     This file is part of Lawnchair Launcher.
  ~
  ~     Lawnchair Launcher is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Lawnchair Launcher is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Lawnchair Launcher.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ch.deletescape.lawnchair.preferences.PreviewPreference
        app:previewLayout="@layout/feed_preview"
        app:key="pref_feed_preview"/>
    <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
        android:key="pref_swipe_feed"
        android:summary="@string/summary_preference_swipe_feed"
        android:title="@string/title_preference_swipe_feed" />
    <ch.deletescape.lawnchair.preferences.FeedProviderPreference
        android:key="pref_feed_provider_package"
        android:title="@string/title_pref_feed_provider_package"
        android:defaultValue="{applicationId}"
        android:summary="%s"/>
    <ch.deletescape.lawnchair.preferences.StyledPreferenceCategory
        android:dependency="pref_swipe_feed"
        android:title="@string/drawer_tabs">
        <ch.deletescape.lawnchair.preferences.TabControllerPreference
            android:key="pref_feed_tab_controller"
            android:defaultValue="ch.deletescape.lawnchair.feed.tabs.TabController"
            android:summary="%s"
            android:title="@string/title_pref_feed_tab_controller" />
        <ch.deletescape.lawnchair.preferences.CustomizableTabsPreference
            android:key="pref_feed_tabs"
            android:title="@string/title_pref_feed_tabs" />
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_feed_widgets_tab"
            android:title="@string/title_pref_feed_widgets_tab" />
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_show_other_tab"
            android:title="@string/title_pref_show_other_tab"
            android:defaultValue="true"
            android:summary="@string/summary_pref_show_other_tab" />
    </ch.deletescape.lawnchair.preferences.StyledPreferenceCategory>
    <ch.deletescape.lawnchair.preferences.StyledPreferenceCategory
        android:dependency="pref_swipe_feed"
        android:title="@string/pref_category_theme">
        <ch.deletescape.lawnchair.colors.preferences.ColorPickerPreference
            android:key="pref_feedBackgroundColorResolver"
            android:title="@string/background_color"
            app:resolvers="@array/resolvers_shelf_background" />
        <ch.deletescape.lawnchair.colors.preferences.ColorPickerPreference
            android:key="pref_feedCardColorResolver"
            android:title="@string/title_pref_card_background"
            app:resolvers="@array/resolvers_feed_card_background" />
        <ch.deletescape.lawnchair.preferences.ImageProviderPreference
            android:key="pref_feed_background"
            android:title="@string/title_pref_feed_background"
            android:summary="%s"/>
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_feed_infobox"
            android:defaultValue="true"
            android:title="@string/title_pref_feed_infobox"
            android:summary="@string/summary_pref_feed_infobox"/>
        <ch.deletescape.lawnchair.preferences.Preference
            android:dependency="pref_feed_background"
            android:key="pref_share_background_image"
            android:title="@string/title_pref_share_background_image"
            android:summary="@string/summary_pref_share_background_image" />
        <ch.deletescape.lawnchair.preferences.FeedCustomBackgroundPreference
            android:key="pref_feed_custom_background"/>
        <ch.deletescape.lawnchair.preferences.Preference
            android:key="pref_remove_feed_widget"
            android:title="@string/title_pref_remove_feed_widget"/>
        <ch.deletescape.lawnchair.preferences.Preference
            android:key="pref_title_bar_home_widget"
            android:title="@string/title_pref_title_bar_home_widget"
            android:summary="@string/summary_pref_title_bar_home_widget"/>
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_feed_toolbar_widget_force_style"
            android:defaultValue="false"
            android:title="@string/title_pref_feed_toolbar_widget_force_style"
            android:summary="@string/summary_pref_feed_toolbar_widget_force_style"/>
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_feed_show_event_color"
            android:title="@string/title_pref_feed_show_event_color"
            android:summary="@string/summary_pref_feed_show_event_color"
            android:defaultValue="true" />
        <ch.deletescape.lawnchair.preferences.FeedColorProviderPreference
            android:key="pref_feed_color_provider"
            android:title="@string/title_pref_feed_color_provider"
            android:summary="%s"/>
        <ch.deletescape.lawnchair.preferences.FeedTabColorsPreference
            android:key="pref_feed_tab_colors"
            android:title="@string/title_pref_feed_tab_colors"/>
        <ch.deletescape.lawnchair.preferences.FeedAnimationDelegatePreference
            android:key="pref_feed_animation"
            android:title="@string/title_pref_feed_animation"
            android:summary="%s"
            android:defaultValue="ch.deletescape.lawnchair.feed.anim.DefaultFeedTransitionDelegate"/>
        <ch.deletescape.lawnchair.preferences.TitleAlignmentPreference
            android:key="pref_feed_card_title_alignment"
            android:summary="%s"
            android:title="@string/title_pref_feed_card_title_alignment"
            android:defaultValue="c"/>
        <ch.deletescape.lawnchair.preferences.TitleAlignmentPreference
            android:key="pref_feed_header_only_card_title_alignment"
            android:summary="%s"
            android:title="@string/title_pref_feed_header_only_card_title_alignment"
            android:defaultValue="e"/>
        <ch.deletescape.lawnchair.preferences.TabIndicatorPreference
            android:key="pref_feed_indicator_provider"
            android:title="@string/title_pref_feed_indicator_provider"
            android:defaultValue="ch.deletescape.lawnchair.feed.tabs.indicator.TabIndicatorProvider"
            android:summary="%s"/>
        <ch.deletescape.lawnchair.preferences.SeekbarPreference
            android:key="pref_feed_opacity"
            android:persistent="true"
            android:title="@string/opacity"
            app:defaultSeekbarValue="0"
            app:maxValue="100"
            app:minValue="0"
            app:steps="100"
            app:summaryFormat="%.0f%%"
            app:summaryMultiplier="1" />
        <ch.deletescape.lawnchair.preferences.SeekbarPreference
            android:key="pref_feed_blur_strength"
            android:persistent="true"
            android:title="@string/blur_radius_pref_title"
            app:defaultSeekbarValue="255"
            app:maxValue="255"
            app:minValue="1"
            app:steps="255"
            app:summaryFormat="%.0f"
            app:summaryMultiplier="1" />
        <ch.deletescape.lawnchair.preferences.SeekbarPreference
            android:key="pref_feed_corner_rounding"
            android:persistent="true"
            android:title="@string/title_pref_feed_corner_rounding"
            app:defaultSeekbarValue="0"
            app:maxValue="24"
            app:minValue="0"
            app:steps="1000"
            app:summaryFormat="%.0fdp"
            app:summaryMultiplier="1" />
        <ch.deletescape.lawnchair.preferences.SeekbarPreference
            android:key="pref_feed_card_opacity"
            android:persistent="true"
            android:title="@string/title_pref_feed_card_opacity"
            app:defaultSeekbarValue="255"
            app:maxValue="255"
            app:minValue="0"
            app:steps="255"
            app:summaryFormat="%.0f"
            app:summaryMultiplier="1" />
        <ch.deletescape.lawnchair.preferences.SeekbarPreference
            android:key="pref_feed_decoration_margin_vertical"
            android:persistent="true"
            android:title="@string/title_pref_feed_card_margin_vertical"
            app:defaultSeekbarValue="16"
            app:maxValue="128"
            app:minValue="0"
            app:steps="128"
            app:summaryFormat="%.0fdp"
            app:summaryMultiplier="1" />
        <ch.deletescape.lawnchair.preferences.SeekbarPreference
            android:key="pref_feed_decoration_margin_horizontal"
            android:persistent="true"
            android:title="@string/title_pref_feed_card_margin_horizontal"
            app:defaultSeekbarValue="16"
            app:maxValue="128"
            app:minValue="0"
            app:steps="128"
            app:summaryFormat="%.0fdp"
            app:summaryMultiplier="1" />
        <ch.deletescape.lawnchair.preferences.SeekbarPreference
            android:key="pref_feed_card_elevation"
            android:persistent="true"
            android:title="@string/title_pref_feed_card_elevation"
            app:defaultSeekbarValue="16"
            app:maxValue="128"
            app:minValue="0"
            app:steps="128"
            app:summaryFormat="%.0fdp"
            app:summaryMultiplier="1" />
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_blur_feed_cards"
            android:summary="@string/description_pref_blur_feed_cards"
            android:title="@string/title_pref_blur_feed_cards" />
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_feed_hide_toolbar"
            android:summary="@string/summary_pref_feed_hide_toolbar"
            android:title="@string/title_pref_feed_hide_toolbar" />
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_feed_blur"
            android:summary="@string/summary_pref_feed_blur"
            android:title="@string/title_pref_feed_blur" />
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_feed_tabs_on_bottom"
            android:summary="@string/summary_pref_feed_tabs_on_bottom"
            android:title="@string/title_pref_feed_tabs_on_bottom" />
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_feed_display_back_to_top_button"
            android:title="@string/title_pref_feed_display_back_to_top_button"
            android:summary="@string/summary_pref_feed_display_back_to_top_button"/>
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_high_contrast_toolbar"
            android:title="@string/title_pref_high_contrast_toolbar"
            android:summary="@string/summary_pref_high_contrast_toolbar"/>
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_display_feed_tabs_as_single_line"
            android:title="@string/title_pref_display_feed_tabs_as_single_line"
            android:summary="@string/summary_pref_display_feed_tabs_as_single_line"/>
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_feed_hide_tab_text"
            android:title="@string/title_pref_feed_hide_tab_text"
            android:summary="@string/summary_pref_feed_hide_tab_text"/>
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_feed_hide_unused_tabs"
            android:title="@string/title_pref_feed_hide_unused_tabs"
            android:summary="@string/summary_pref_feed_hide_unused_tabs"/>
    </ch.deletescape.lawnchair.preferences.StyledPreferenceCategory>

    <ch.deletescape.lawnchair.preferences.StyledPreferenceCategory
        android:title="@string/pref_category_chips">
        <ch.deletescape.lawnchair.preferences.ChipProvidersPreference
            android:key="pref_feed_chips_dummy_key"
            android:title="@string/title_pref_feed_chips_dummy_key"
            android:summary="%s"/>
        <ch.deletescape.lawnchair.persistence.prefs.SeekbarPreference
            android:key="feed_chip_opacity"
            android:title="@string/title_pref_feed_chip_opacity"
            app:defaultSeekbarValue="1"
            app:maxValue="1"
            app:minValue="0"
            app:steps="100"
            app:summaryFormat="%.0f"
            app:summaryMultiplier="100"/>
        <ch.deletescape.lawnchair.persistence.prefs.SeekbarPreference
            android:key="feed_chip_weather_item_count"
            android:title="@string/title_pref_feed_chip_weather_item_count"
            app:defaultSeekbarValue="5"
            app:maxValue="10"
            app:minValue="1"
            app:steps="9"
            app:summaryFormat="%.0f"
            app:summaryMultiplier="1"/>
        <ch.deletescape.lawnchair.persistence.prefs.StyledSwitchPreferenceCompat
            android:key="feed_chips_on_top"
            android:defaultValue="false"
            android:title="@string/title_pref_feed_chips_on_top"
            android:summary="@string/summary_pref_feed_chips_on_top"/>
        <ch.deletescape.lawnchair.persistence.prefs.StyledSwitchPreferenceCompat
            android:key="feed_outline_chips"
            android:defaultValue="false"
            android:title="@string/title_pref_feed_outline_chips"
            android:summary="@string/summary_pref_feed_outline_chips"/>
    </ch.deletescape.lawnchair.preferences.StyledPreferenceCategory>

    <ch.deletescape.lawnchair.preferences.StyledPreferenceCategory
        android:title="@string/pref_category_providers"
        android:dependency="pref_swipe_feed">
        <ch.deletescape.lawnchair.preferences.FeedProvidersPreference
            android:dependency="pref_swipe_feed"
            android:key="pref_feed_providers"
            android:summary="%s"
            android:title="@string/title_preference_feed_providers" />

        <ch.deletescape.lawnchair.preferences.SeekbarPreference
            android:key="pref_forecast_item_count"
            android:persistent="true"
            android:title="@string/title_pref_forecast_item_count"
            app:defaultSeekbarValue="6"
            app:maxValue="20"
            app:minValue="0"
            app:steps="20"
            app:summaryFormat="%.0f"
            app:summaryMultiplier="1" />

        <ch.deletescape.lawnchair.preferences.SeekbarPreference
            android:key="pref_daily_forecast_item_count"
            android:persistent="true"
            android:title="@string/title_pref_daily_forecast_item_count"
            app:defaultSeekbarValue="4"
            app:maxValue="20"
            app:minValue="0"
            app:steps="20"
            app:summaryFormat="%.0f"
            app:summaryMultiplier="1" />
        <ch.deletescape.lawnchair.preferences.IntSeekbarPreference
            android:key="pref_feed_calendar_days"
            android:persistent="true"
            android:title="@string/title_pref_feed_calendar_days"
            app:defaultSeekbarValueI="5"
            app:maxValueI="120"
            app:minValueI="1"
            app:steps="120"
            app:summaryFormat="%d d"
            app:summaryMultiplier="1" />

        <ch.deletescape.lawnchair.preferences.RSSSourcesPreference
            android:key="pref_rss_sources"
            android:summary="%s"
            android:title="@string/title_pref_rss_sources" />

        <ch.deletescape.lawnchair.preferences.FeedWidgetsListPreference
            android:title="@string/title_preference_feed_widgets"
            android:key="pref_feed_widgets" />
        <ch.deletescape.lawnchair.preferences.WebApplicationsPreference
            android:key="pref_feed_web_applications"
            android:title="@string/title_pref_feed_web_applications" />
        <ch.deletescape.lawnchair.preferences.LocaleOverridePreference
            android:key="pref_override_locale"
            android:title="@string/title_pref_override_locale" />
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_show_vertical_daily_forecast"
            android:defaultValue="false"
            android:summary="@string/summary_pref_show_vertical_daily_forecast"
            android:title="@string/title_pref_show_vertical_daily_forecast" />
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_show_vertical_hourly_forecast"
            android:defaultValue="false"
            android:summary="@string/summary_pref_show_vertical_hourly_forecast"
            android:title="@string/title_pref_show_vertical_hourly_forecast" />
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_elevate_weather_card"
            android:defaultValue="false"
            android:summary="@string/summary_pref_elevate_weather_card"
            android:title="@string/title_pref_elevate_weather_card" />
        <androidx.preference.EditTextPreference
            android:defaultValue="https://example.com/search?q=%s"
            android:key="pref_feed_search_url_template"
            android:title="@string/title_pref_feed_search_url_template"/>
    </ch.deletescape.lawnchair.preferences.StyledPreferenceCategory>
</androidx.preference.PreferenceScreen>
