<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (c) 2017-2019 the Lawnchair team
  ~     Copyright (c)  2019 oldosfan (would)
  ~     This file is part of Lawnchair Launcher.
  ~
  ~     Lawnchair Launcher is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Lawnchair Launcher is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Lawnchair Launcher.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:fontFamily="serif"
        tools:text="@string/placeholder_rss_item" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/placeholder_rss_item_categories"
        android:id="@+id/article_categories" />
    <Button
        android:id="@+id/open_externally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:fontFamily="serif"
        android:text="@string/title_button_open_externally"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textAllCaps="false" />
    <ScrollView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textIsSelectable="true"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:fontFamily="serif"
            tools:text="@string/placeholder_rss_card_description" />
    </ScrollView>
</LinearLayout>