<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (c) 2017-2019 the Lawnchair team
  ~     Copyright (c)  2019 oldosfan (would)
  ~     This file is part of Lawnchair Launcher.
  ~
  ~     Lawnchair Launcher is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Lawnchair Launcher is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Lawnchair Launcher.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/dimen_calendar_feed_event_description"
        android:textStyle="bold"
        android:text="@string/placeholder_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calendar_event_title" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textStyle="italic"
            android:text="@string/placeholder_calendar_event_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_event_address" />
        <TextView
            android:foreground="@drawable/ripple"
            android:padding="3dp"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="8dp"
            android:text="@string/title_calendar_event_directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_event_directions" />
    </LinearLayout>
</LinearLayout>